# data-gen

./: .gitignore  README.md  app.py  gen.sh  pyproject.toml  vqa.sh
BIRD_analysis/: bird_multitable_analysis.json
VQA/: tableVQA.py
VQA/prompts/: categories.py  prompts_vqa.py
db_scripts/: bird_analysis.py  db_extract_tables.py  gen_db.py  spider_vqa.py
table_gen/: mimo_table.py  mmqa_gen.py  multitab_gen.py  table2img.py  table2img2.py
utils/: hf_upload.py
